# othello-ai

./: .gitignore  CMakeLists.txt  README.md
libothello/: CMakeLists.txt  alphabetapruning.cpp  alphabetapruning.h  bitboard.cpp  bitboard.h  cornerevaluator.h  countingevaluator.h  evaluator.cpp  evaluator.h  iheuristic.h  logger.h  mobilityevaluator.h  stabilityevaluator.cpp  stabilityevaluator.h  state.cpp  state.h  utils.h  weightedevaluator.h
othello/: CMakeLists.txt  main.cpp
